# Deuce-Seven-Offsuit

./: Cargo.toml  README.md  RUN.md  deck_fn.rs  game.rs  main.rs
src/: card.rs  deck.rs  deck_fn.rs  main.rs  player.rs
